dataset/local/df_validate_user_instruction/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: validate-user-instruction
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: validate-user-instruction
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: validate-user-instruction
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
